--- a/_drafts/2019-03-25-blog-post-8.md
+++ b/_drafts/2019-03-25-blog-post-8.md
@@ -17,11 +17,25 @@ The majority of my time this term was spent at home remotely working on research
 
 Recently, three papers were published:
 
-lung
+**Pathologist-level Classification of Histologic Patterns on Resected Lung Cancer Slides with Deep Neural Networks**  
+**Jason Wei**, Laura Tafe, Yevgeniy Linnik, Louis Vaickus, Naofumi Tomita, Saeed Hassanpour  
+*Nature Scientific Reports 2019*   
+<a href="https://www.nature.com/articles/s41598-019-40041-7" style="color:navy" target="_blank">[paper]</a> 
+<a href="https://medium.com/health-data-science/classification-of-histopathology-images-with-deep-learning-a-practical-guide-2e3ffd6d59c5" style="color:navy" target="_blank">[blog post]</a>
+<a href="https://github.com/BMIRDS/deepslide" style="color:navy" target="_blank">[Github]</a> 
+<img height="16" src="https://img.shields.io/github/stars/BMIRDS/deepslide.svg?logo=github&logoColor=white&colorA=navy&link=https://github.com/BMIRDS/deepslide&link=https://github.com/BMIRDS/deepslide">
 
-celiac
+**Automated Detection of Celiac Disease on Duodenal Biopsy Slides: A Deep Learning Approach**  
+**Jason Wei**, Jerry Wei, Christopher Jackson, Bing Ren, Arief Suriawinata, Saeed Hassanpour  
+*Journal of Pathology Informatics 2019*   
+<a href="http://www.jpathinformatics.org/article.asp?issn=2153-3539;year=2019;volume=10;issue=1;spage=7;epage=7;aulast=Wei" style="color:navy" target="_blank">[paper]</a>
 
-urine
+**Automating the Paris System for Urine Cytopathology: A Hybrid Deep Learning and Morphometric Approach**  
+Louis Vaickus, Arief Suriawinata, **Jason Wei**, Xiaoying Liu  
+*Cancer Cytopathology 2019*  
+<a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cncy.22099" style="color:navy" target="_blank">[paper]</a>
+
+I'm most proud of the lung cancer paper, which actually got a lot of media attention (x tweets and x news outlets as of date)
 
 **Open-Source Code**. One cool thing that happened was that I posted my code for histopathology image classification called *DeepSlide* publicly on [Github](https://github.com/BMIRDS/deepslide), and it was [retweeted](https://twitter.com/saeedhp) by PyTorch! It was nice to finally get stars on the Github repo, and a bunch of randos have been emailing me with questions about our paper.
 
@@ -31,22 +45,22 @@ urine
 
 **Data augmentation in NLP**. I worked part-time remotely with the research group at Protago Labs, an artificial intelligence startup in Tysons Corner, VA. Because of my experience working with small datasets, I wanted to explore data augmentation techniques in natural language processing (NLP), a topic with a lack of good literature in the field. I developed a simple set of techniques called *EDA* for Easy Data Augmentation, and wrote a [paper](https://arxiv.org/abs/1901.11196) demonstrating this on various datasets. 
 
-**Blogging.** I wrote a [blog post](https://towardsdatascience.com/these-are-the-easiest-data-augmentation-techniques-in-natural-language-processing-you-can-think-of-88e393fd610) about EDA on Medium, which was the first academic blog post I've written. I was surprised to see that it was chosen by Medium curators to be distributed to readers following the "Machine Learning" and "Data Science" tags, and my post got 500+ views and 250+ reads in one week! It was encouraging to see people reading about my work and emailing me with questions. 
+**Blogging.** I wrote a [blog post](https://towardsdatascience.com/these-are-the-easiest-data-augmentation-techniques-in-natural-language-processing-you-can-think-of-88e393fd610) about EDA on Medium, which was the first academic blog post I've written. I was surprised to see that it was chosen by Medium curators to be distributed to readers following the "Machine Learning" and "Data Science" tags, and my post got 500+ views and 250+ reads in one week! It was encouraging to see people reading about my work and emailing me with questions. My AI for lung cancer paper was also curated but did not get many views. 
 
 ## Living at Home
 
 
 ## Working Out
 
-I was never really into working out but I did a bit in Denmark and liked it so I got a gym membership with my brother.
+I was never really into working out but I did a bit in Denmark and liked it so I got a gym membership with my brother. This term was mostly focused on building mass and improving my bench press. 
 
-**Workout plan.** 
+**Workout plan.** I hurt my right knee mid-December from squating, so I only did upper body workouts. I did a five day cycle: push on days 1 and 3, pull on days 2 and 4, and rest on day 5. Every day 1 I would test my 5x5 bench, my main metric for improvement, and on days 3 and 4 I would do particularly hard workouts. On the bench press, towards the end of the term I had a pretty bad muscle imbalance where at heavy weights, my left arm couldn't keep up and my body ended up turning to compensate, which completely threw off my form.
 
-**Nutrition plan.** I ate three meals a day: lunch and two dinners. This was often 1.5 cups of rice with meat and vegetables. Each day, I took 3 scoops of whey protein, 5g of creatine, 2 fish oil tablets, and occasionally a caffeine pill.
+**Nutrition plan.** I ate three meals a day: lunch and two dinners. This was often 1.5 cups of rice with meat and vegetables. Each day, I took 3 scoops of whey protein, 5g of creatine, 2 fish oil tablets, and occasionally a caffeine pill and BCAA.
 
-**Improvement.**
+**Improvement.** My 5-cycle plan worked out very well in the beginning; I improved from 125 to 140 in just 15 days. However, it got much slower after that, taking me 17 days to improve to 145, possibly because I was overworking my CNS. 
 
-**How do I feel about this?**
+**How do I feel about this?** I enjoyed working out more than I expected, which indicates that I should probably be more open-minded about trying out new things. 
 
 Molly's Game
 
@@ -91,6 +105,7 @@ Rejection: I applied to like over twenty finance internships my freshman year of
 I think this book is powerful for college-age/mid-twenties readers who are looking for what they want to do with life. But I don't think it will resonate much with people over like 40 years old, as they've had enough experience to already know many of these things.
 
 ***Deep Work.*** I was motivated to read this book after my advisor shared this [post](https://www.chronicle.com/interactives/is-email-making-professors-stupid) with me. Cal Newport defines "deep work" as concentrated work that pushes cognitive abilities to their limit, an idea I really connected with. I realized that I haven't actually done this much; think I was better at achieving this actually my junior year of high-school, when I would frequent the library to get distraction-free studying done since I had to shove a high density of information into my brain for all my classes and projects. A couple of points that I really liked:
+
 1. **Working in batches.** Adam Grant (a Wharton professor) was prolific because he batched hard work into long, uninterrupted stretches (e.g., one semester just teaching, one just research).
 2. **Flow.** Deep work often involves a flow state, which generates happiness (busy work doesn't).
 3. **The bimodal philosophy of deep work scheduling.** Reserve 1-3 days a week for deep work and leave the rest for open time.
@@ -98,6 +113,14 @@ I think this book is powerful for college-age/mid-twenties readers who are looki
 5. **Lead measures vs lag measures.** Keep track of time spent doing deep work (lead measure) rather than number of papers published (lag measure).
 6. **Stop.** Forget about work once your workday shuts down. Use a shutdown ritual.
 7. **Boredom and idleness.** Don't check your phone when you're bored. Schedule internet time. 
+8. **Tool selection.** Only adopt new things if the positive greatly outweighs the negative. Think about opportunity cost. For example, facebook can be a great way to keep in touch with old friends, but has a big opportunity cost in terms of time that could be spent working, exercising, meeting people in person, etc. 
+9. **Scheduling.** Write schedule for your day with blocks for what you're going to do.
+10. **Fixed schedule productivity.** Impose some arbitrary time constraint. While this seems counterproductive, you'll actually adapt to be able to work in these limits.
+11. **Email responses.** Do not reply to an email or message if (1) you don't care or (2) nothing really good would happen if you did respond and nothing really bad would happen if you did not respond.
+
+***Surely You're Joking, Mr. Feynman!*** My friend June recommended that I read this book about the funny stories that Feynman had throughout his life, and I finally got to it. It was an enjoyable read, and while I expected it to be on how he learned life lessons that led him to become a great physicist, Feynman was actually very humble and talked about brilliant comments he made, picking up women, and overall trolling. Bill Gates found Feynman to be a great teacher, and I hope to watch [his lecture series](https://www.gatesnotes.com/Education/The-Best-Teacher-I-Never-Had) when I get some free time. A piece of advice that Sam Greydanus gave me is a quote from Feynman:
+
+*Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.*
 
 ***The Life-Changing Magic of Tidying Up.*** When I was packing for Denmark last fall, I thought hard about what possessions I need and were important to me, so I was interested in this book. Marie Kondo's proposed Kon-Mari technique involves discarding all posessions that do not spark joy, and then organizing by item category. She says that surrounding yourself with only things that bring you joy not only puts your house in order, but also brings clarity to your life. The elegance of and reasoning behind her approach substantiates the idea that a simple approach based on first principles thinking is often the best. After reading, I went to my old room in the basement and discarded more than half of my belongings.
 
@@ -111,6 +134,7 @@ I guess a new thing that I thought was pretty cool from Molly's Game is that her
 - Phil Hellmuth is the "poker brat" and known for his [rants](https://www.youtube.com/watch?v=mPmcU8u8MEc) every time he loses. But I watched some of his interviews, and his ideas regarding motivation, success, and positivety show that he is actually a next-level thinker in many regards.
 - [Bart Kwan](https://www.youtube.com/channel/UCCV3bIgzH800SK0AodYKy1g) is a youtuber, comedian, powerlifter, and business owner. He makes really great insights on working out and on life, all while being funny. He does so many things well and his lifestyle inspires me.
 - Jessica Chastain is a charismatic actor and has such a captivating voice. I loved *Molly's Game* and I thought *Jolene* was alright.
+- Lisa Edelstein is great in *The Good Doctor*.
 
 ## Songs
 Some songs that I've been listening to for a while now get me caught up in the feels because I've attached them to specific memories or places. I think it would be cool to listen to these 10 years from now and see if they still resonate:
