add life experiences

--- a/_drafts/2019-03-25-blog-post-8.md
+++ b/_drafts/2019-03-25-blog-post-8.md
@@ -39,16 +39,27 @@ I'm most proud of the lung cancer paper, which actually got a lot of media atten
 
 **Open-Source Code**. One cool thing that happened was that I posted my code for histopathology image classification called *DeepSlide* publicly on [Github](https://github.com/BMIRDS/deepslide), and it was [retweeted](https://twitter.com/saeedhp) by PyTorch! It was nice to finally get stars on the Github repo, and a bunch of randos have been emailing me with questions about our paper.
 
-**Moving forward**. 
+**What makes a good scientist?** This term, I've been thinking a lot about what defines a good scientist. A metric such as "number of publications" is probably naive since publishing a lot of mediocre papers in low-tier journals is not considered significant in my opinion. A often-used metric is number of citations, which I think is pretty good, but the lag factor of this makes it almost useless for immediate feedback. Perhaps a good metric is "number of papers in top-tier publications", where I define top-tier publications as the following:
+
+* Nature Medicine or similar for AI in medicine
+* MICCAI for machine learning in healthcare
+* CVPR or similar for computer vision
+* ACL or similar for NLP
+* NIPS or similar for machine learning
+
+Unfortunately, I'm not even on the scoreboard based on this metric, so it looks like I have some work to do. Also, doing mediocre projects just for the sake of publishing another paper is considered a blatant waste of time by this metric. I'm not a very experienced researcher by any means, so I think this will change over time. But these are my thoughts for now.  
 
 ## Protago Labs
 
-**Data augmentation in NLP**. I worked part-time remotely with the research group at Protago Labs, an artificial intelligence startup in Tysons Corner, VA. Because of my experience working with small datasets, I wanted to explore data augmentation techniques in natural language processing (NLP), a topic with a lack of good literature in the field. I developed a simple set of techniques called *EDA* for Easy Data Augmentation, and wrote a [paper](https://arxiv.org/abs/1901.11196) demonstrating this on various datasets. 
+**Data augmentation in NLP**. I worked part-time remotely with the research group at Protago Labs, an artificial intelligence startup in Tysons Corner, VA. Because of my experience working with small datasets, I was interested in data augmentation techniques in natural language processing (NLP), a topic lacking good literature in the field. I developed a simple set of techniques called *EDA* for Easy Data Augmentation, and wrote a [paper](https://arxiv.org/abs/1901.11196) demonstrating this on various datasets. 
 
-**Blogging.** I wrote a [blog post](https://towardsdatascience.com/these-are-the-easiest-data-augmentation-techniques-in-natural-language-processing-you-can-think-of-88e393fd610) about EDA on Medium, which was the first academic blog post I've written. I was surprised to see that it was chosen by Medium curators to be distributed to readers following the "Machine Learning" and "Data Science" tags, and my post got 500+ views and 250+ reads in one week! It was encouraging to see people reading about my work and emailing me with questions. My AI for lung cancer paper was also curated but did not get many views. 
+**Blogging.** I wrote a [blog post](https://towardsdatascience.com/these-are-the-easiest-data-augmentation-techniques-in-natural-language-processing-you-can-think-of-88e393fd610) about EDA on Medium, which was the first academic blog post I've written. I was surprised to see that it was chosen by Medium curators to be distributed to readers following the "Machine Learning" and "Data Science" tags, and my post got 500+ views and 250+ reads in one week! It was encouraging to see people reading about my work and emailing me with questions. My AI for lung cancer paper was also "curated" but did not get many views. 
 
 ## Living at Home
 
+I enjoyed living at home with my mom and brother. We ate dinner together every day, which was nice and really important to me. My mom has been working a lot recently, but still has time to hang out with her friends and cook for me and my brother. My brother is doing well at school, and we went to the gym together every day, which was good bonding time. Every time I visit home I'm always impressed with how much by brother matures. 
+
+Having a big room, big bed, and private bathroom is a luxury. I took baths occasionally, which helped my body relax and clear my mind. Baths are also a good place to read and think (the water maintains its temperature for more than an hour if you start off really hot and close the shower curtain.)
 
 ## Working Out
 
@@ -58,7 +69,7 @@ I was never really into working out but I did a bit in Denmark and liked it so I
 
 **Nutrition plan.** I ate three meals a day: lunch and two dinners. This was often 1.5 cups of rice with meat and vegetables. Each day, I took 3 scoops of whey protein, 5g of creatine, 2 fish oil tablets, and occasionally a caffeine pill and BCAA.
 
-**Improvement.** My 5-cycle plan worked out very well in the beginning; I improved from 125 to 140 in just 15 days. However, it got much slower after that, taking me 17 days to improve to 145, possibly because I was overworking my CNS. 
+**Improvement.** My 5-cycle plan worked out very well in the beginning; I improved from 125 to 140 in just 15 days. However, it got much slower after that, taking me 17 days to improve to 145, maybe because I was overworking my CNS. 
 
 **How do I feel about this?** I enjoyed working out more than I expected, which indicates that I should probably be more open-minded about trying out new things. 
 
@@ -66,15 +77,15 @@ Molly's Game
 
 Power of visualization: whether it is on the bench press, what you what your cleaned room to look like, or the results of a research project.
 
-
+How do Danish people define success from one of Oprah's [youtube videos](https://www.youtube.com/watch?v=eKa-3lbLeyA&t=888s): having good values, work life balance, being happy, doing something creative. 
 
 ## Reading
 
 Since I had more time this term than usual, I did some reading. Someone put years of work and decades of knowledge into a book, and I'm able to absorb a large amount of that in tens of hours. I find that extremely empowering.
 
-***The Subtle Art of Not Giving a F\*ck.*** I bought this book because of its incredible reviews on Amazon. Manson is a big potty-mouth but brings up insightful ideas on self-improvement and tells things like it is. Most good books have one or maybe two or three takeaways, but this book has like, dozens. I realize that this book may not be very helpful for established adults with a lot of life experience, but as a 20-year-old reading it, I consider many of his ideas profound. I would recommend it to anyone younger than 30 years old. These are his biggest ideas:
+***The Subtle Art of Not Giving a F\*ck.*** I bought this book because of its incredible reviews on Amazon. Manson is a potty mouth but brings up insightful ideas on self-improvement and tells things like it is. Most good books have one or maybe two or three takeaways, but this book has like, dozens. I realize that this book may not be very helpful for established adults with a lot of life experience, but as a 20-year-old reading it, I consider many of his ideas profound. I would recommend it to anyone younger than 30 years old. These are his biggest ideas:
 
-1. **"Not giving a fork."** means not caring about unimportant things. Reserve your ducks for what truly matters. If you are constantly bothered by trivial things, find something more important to give a firetruck about. What matters to me? Family, friends, health, research, the future of humanity, stuff like that. Not xyz.
+1. **"Not giving a fork."** means not caring about unimportant things. Reserve your ducks for what truly matters. If you are constantly bothered by trivial things, find something more important to give a firetruck about. What matters to me? Family, friends, health, research, the future of humanity, stuff like that. Not the guy who cut me off on the highway or the rude cashier at the grocery store.
 2. **Problems.** They never end, just merely get exchanged or upgraded. Solving them brings happiness. Think of happiness as a constant work-in-progress, since problems never end and you will have to keep solving them. What problems do you want to struggle for? Don't ask yourself what you enjoy. Ask yourself, what pain are you willing to sustain?
 3. **"Highs."** Manson defines "highs" as temporary ways to feel good that do not address the underlying problem. This obviously includes drugs, alcohol, and sex, but denial and blame are also highs to temporarily make themselves feel better. 
 4. **Entitlement.** People who think that they are better or worse than everyone else think they deserve special treatment. Information overload in our age overstates exceptionalism and makes people think that it is not okay to be average.
@@ -104,7 +115,7 @@ Rejection: I applied to like over twenty finance internships my freshman year of
 
 I think this book is powerful for college-age/mid-twenties readers who are looking for what they want to do with life. But I don't think it will resonate much with people over like 40 years old, as they've had enough experience to already know many of these things.
 
-***Deep Work.*** I was motivated to read this book after my advisor shared this [post](https://www.chronicle.com/interactives/is-email-making-professors-stupid) with me. Cal Newport defines "deep work" as concentrated work that pushes cognitive abilities to their limit, an idea I really connected with. I realized that I haven't actually done this much; think I was better at achieving this actually my junior year of high-school, when I would frequent the library to get distraction-free studying done since I had to shove a high density of information into my brain for all my classes and projects. A couple of points that I really liked:
+***Deep Work.*** I was motivated to read this book after my advisor shared this [post](https://www.chronicle.com/interactives/is-email-making-professors-stupid) with me. Cal Newport defines "deep work" as concentrated work that pushes cognitive abilities to their limit, an idea I really connected with. I realized that I haven't actually done this much; I was better at achieving this actually my junior year of high school, when I would frequent the library to get distraction-free studying done since I had to shove a high density of information into my brain for all my classes and projects. A couple of points that I really liked:
 
 1. **Working in batches.** Adam Grant (a Wharton professor) was prolific because he batched hard work into long, uninterrupted stretches (e.g., one semester just teaching, one just research).
 2. **Flow.** Deep work often involves a flow state, which generates happiness (busy work doesn't).
@@ -118,7 +129,14 @@ I think this book is powerful for college-age/mid-twenties readers who are looki
 10. **Fixed schedule productivity.** Impose some arbitrary time constraint. While this seems counterproductive, you'll actually adapt to be able to work in these limits.
 11. **Email responses.** Do not reply to an email or message if (1) you don't care or (2) nothing really good would happen if you did respond and nothing really bad would happen if you did not respond.
 
-***Surely You're Joking, Mr. Feynman!*** My friend June recommended that I read this book about the funny stories that Feynman had throughout his life, and I finally got to it. It was an enjoyable read, and while I expected it to be on how he learned life lessons that led him to become a great physicist, Feynman was actually very humble and talked about brilliant comments he made, picking up women, and overall trolling. Bill Gates found Feynman to be a great teacher, and I hope to watch [his lecture series](https://www.gatesnotes.com/Education/The-Best-Teacher-I-Never-Had) when I get some free time. A piece of advice that Sam Greydanus gave me is a quote from Feynman:
+***Digital Minimalism.*** I read Cal Newport's newest book since I liked his previous one so much and I had always been interested in how social media affects the next generation. I feel that he is onto something special in this book, since the effects of social media and smartphones have also been heavily discussed by Mark Manson and Simon Sinek. I feel like I might have a hard time doing this while in college, since I need to be connected at least by phone to get meals with people, workout, and play tennis. 
+
+
+
+
+
+
+***Surely You're Joking, Mr. Feynman!*** My friend June recommended that I read this book about the funny stories that Feynman had throughout his life, and I finally got to it. It was an enjoyable read, and while I expected it to be life lessons that led him to become a great physicist, Feynman was actually very humble and talked about accidentally brilliant comments he made, picking up women, and overall trolling. Bill Gates found Feynman to be a great teacher, and I hope to watch [his lecture series](https://www.gatesnotes.com/Education/The-Best-Teacher-I-Never-Had) when I get some free time. I found his experiences with hallucinations in sensory deprivation tanks to be interesting, and I hope to try it one day. A piece of advice that Sam Greydanus gave me a while ago is a quote from Feynman:
 
 *Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.*
 
