--- a/_posts/2019-03-20-blog-post-8.md
+++ b/_posts/2019-03-20-blog-post-8.md
@@ -1,12 +1,15 @@
 ---
 title: 'Winter 2019: Solace'
-date: 2018-09-01
+date: 2019-03-20
 permalink: /posts/2019/3/blog-post-8/
 tags:
   - machine learning
   - deep learning
   - protago labs
   - research
+  - medical image analysis
+  - movies
+  - gym
 ---
 
 This winter, I split my time between Hassanpour Lab and AI research at Protago Labs.
@@ -35,7 +38,7 @@ Louis Vaickus, Arief Suriawinata, **Jason Wei**, Xiaoying Liu
 *Cancer Cytopathology 2019*  
 <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/cncy.22099" style="color:navy" target="_blank">[paper]</a>
 
-I'm most proud of the lung cancer paper, which actually got a lot of media attention (x tweets and x news outlets as of date)
+I'm most proud of the lung cancer paper, which actually got a lot of media attention (96 tweets and covered by 26 news outlets as of March 20, 2019).
 
 **Open-Source Code**. One cool thing that happened was that I posted my code for histopathology image classification called *DeepSlide* publicly on [Github](https://github.com/BMIRDS/deepslide), and it was [retweeted](https://twitter.com/saeedhp) by PyTorch! It was nice to finally get stars on the Github repo, and a bunch of randos have been emailing me with questions about our paper.
 
@@ -63,7 +66,7 @@ Having a big room, big bed, and private bathroom is a luxury. I took baths occas
 
 ## Working Out
 
-I was never really into working out but I did a bit in Denmark and liked it so I got a gym membership with my brother. This term was mostly focused on building mass and improving my bench press. 
+I was never really into lifting weights but I did a bit in Denmark and liked it so I got a gym membership with my brother. This term was mostly focused on building mass and improving my bench press. 
 
 **Workout plan.** I hurt my right knee mid-December from squating, so I only did upper body workouts. I did a five day cycle: push on days 1 and 3, pull on days 2 and 4, and rest on day 5. Every day 1 I would test my 5x5 bench, my main metric for improvement, and on days 3 and 4 I would do particularly hard workouts. On the bench press, towards the end of the term I had a pretty bad muscle imbalance where at heavy weights, my left arm couldn't keep up and my body ended up turning to compensate, which completely threw off my form.
 
@@ -73,15 +76,9 @@ I was never really into working out but I did a bit in Denmark and liked it so I
 
 **How do I feel about this?** I enjoyed working out more than I expected, which indicates that I should probably be more open-minded about trying out new things. 
 
-Molly's Game
-
-Power of visualization: whether it is on the bench press, what you what your cleaned room to look like, or the results of a research project.
-
-How do Danish people define success from one of Oprah's [youtube videos](https://www.youtube.com/watch?v=eKa-3lbLeyA&t=888s): having good values, work life balance, being happy, doing something creative. 
-
 ## Reading
 
-Since I had more time this term than usual, I did some reading. Someone put years of work and decades of knowledge into a book, and I'm able to absorb a large amount of that in tens of hours. I find that extremely empowering.
+Since I had more leisure time this term than usual, I did some reading. Books have years of work and decades of experiences that I'm able to absorb in tens of hours. I find that extremely empowering.
 
 ***The Subtle Art of Not Giving a F\*ck.*** I bought this book because of its incredible reviews on Amazon. Manson is a potty mouth but brings up insightful ideas on self-improvement and tells things like it is. Most good books have one or maybe two or three takeaways, but this book has like, dozens. I realize that this book may not be very helpful for established adults with a lot of life experience, but as a 20-year-old reading it, I consider many of his ideas profound. I would recommend it to anyone younger than 30 years old. These are his biggest ideas:
 
@@ -102,19 +99,6 @@ Other ideas that I liked:
 - **Love.** Unhealthy love is two people trying to escape their problems through their emotions for each other. Healthy love is two people acknowledging and addressing their own problems with each other's support.
 - **Death.** Manson cites Ernest Becker's *The Denial of Death*, which argues that because people fear death, they aim to create a conceptual self that will live forever, an *immortality project*. This can be in the form of names on buildings, statues, careers, children, etc. These immortality projects often lead to entitlement and are a problem. Comfortable with and acceptance of the inevitability of our own death allows us to choose our values more freely. The only way to be comfortable with death is to see yourself as part of something bigger and more unknowable than yourself. "A man who lives fully is prepared to die at any time."
 
-Studying abroad some high thoughts opened my mind up to new perspectives on / ways of thinking of life that I would not have been able to comprehend as a teenager.
-
-- Today's culture of unrealistic positive expectations and being self centered, exascerbated by social media.
-- Learning from failures and negative experiences create success, so accept them.
-
-In tenth grade, I was sucking-up to my history teacher because I had an A- in her class and it was obvious that I just wanted a better grade. She responded by asking me, "why are you so focused on wealth and status?" I told her that I didn't know what I wanted in life, so I only knew to try my best in school so that when I figured out what it was I really wanted, I would be in the best position to achieve it. That was my justification for being so focused on the grade.
-
-After I left the classroom, I remember thinking that she was just salty that she had went to school to become a lawyer but ended up becoming a high school teacher who got butthurt every other day because none of her students liked her or cared about her class. At that moment, when I was fifteen, I could not imagine any reality other than the fact that I was right: I was smarter than her and going to be more successful than her, and she was salty about that and taking her failure out on me. But thinking about it now, I was probably wrong. My current mindset finds that 15-year-old me was pretty stupid. Five years from now, I'll probably think that current me was pretty stupid. Although this does remind me, I do think that my raw intelligence peaked when I was 16 because I had so much work and pressure that year. Here, raw intelligence means: ability to take a test well, rate of absorbing knowledge, rate of doing homework and projects.
-
-Rejection: I applied to like over twenty finance internships my freshman year of college, and I was rejected by all of them. I felt inadequate and was pissed that having "Dartmouth" on my resume wasn't getting me anywhere like I had imagined in high school. But because I didn't get any of those jobs, I was at home and my mom finally connected me to Protago Labs, where I was introduced to artificial intelligence and have been inspired to work in deep learning ever since.
-
-I think this book is powerful for college-age/mid-twenties readers who are looking for what they want to do with life. But I don't think it will resonate much with people over like 40 years old, as they've had enough experience to already know many of these things.
-
 ***Deep Work.*** I was motivated to read this book after my advisor shared this [post](https://www.chronicle.com/interactives/is-email-making-professors-stupid) with me. Cal Newport defines "deep work" as concentrated work that pushes cognitive abilities to their limit, an idea I really connected with. I realized that I haven't actually done this much; I was better at achieving this actually my junior year of high school, when I would frequent the library to get distraction-free studying done since I had to shove a high density of information into my brain for all my classes and projects. A couple of points that I really liked:
 
 1. **Working in batches.** Adam Grant (a Wharton professor) was prolific because he batched hard work into long, uninterrupted stretches (e.g., one semester just teaching, one just research).
@@ -127,20 +111,42 @@ I think this book is powerful for college-age/mid-twenties readers who are looki
 8. **Tool selection.** Only adopt new things if the positive greatly outweighs the negative. Think about opportunity cost. For example, facebook can be a great way to keep in touch with old friends, but has a big opportunity cost in terms of time that could be spent working, exercising, meeting people in person, etc. 
 9. **Scheduling.** Write schedule for your day with blocks for what you're going to do.
 10. **Fixed schedule productivity.** Impose some arbitrary time constraint. While this seems counterproductive, you'll actually adapt to be able to work in these limits.
-11. **Email responses.** Do not reply to an email or message if (1) you don't care or (2) nothing really good would happen if you did respond and nothing really bad would happen if you did not respond.
+11. **Email responses.** Do not reply to an email or message if (1) you don't care or (2) nothing really good would happen if you did respond and nothing really bad would happen if you did not.
 
-***Digital Minimalism.*** I read Cal Newport's newest book since I liked his previous one so much and I had always been interested in how social media affects the next generation. I feel that he is onto something special in this book, since the effects of social media and smartphones have also been heavily discussed by Mark Manson and Simon Sinek. I feel like I might have a hard time doing this while in college, since I need to be connected at least by phone to get meals with people, workout, and play tennis. 
+***Digital Minimalism.*** I read Cal Newport's newest book since I liked his previous one so much and I had always been interested in how social media affects the next generation. I feel that he is onto something important in this book, since the detrimental effects of social media and smartphones have also been brought up by Mark Manson and Simon Sinek. He first argues why being too connected is bad ("checking your likes is the new smoking", which I agreed with before reading the book. 
 
+Several good ideas from his book:
 
+1. He proposes a digital declutter month as a persuasive event that evokes permanent change. 
+2. You don't really need to have your phone on you as much as you think.
+3. Stop clicking like.
+4. Schedule times when it is acceptable to use social media.
+5. Cross-fit, F3, Snakes and Lattes board game cafe have been successful because they create more meaningful bonds between people. 
+6. Reclaim leisure to curb boredom from after leaving social media.
 
+I feel like I might have a hard time doing this while in college, since I need to be connected at least by phone to get meals with people, workout, and play tennis. 
 
-
+* Use youtube, facebook, instagram, BofA on Fridays.
+* Check email, messenger, and groupme once a day.
+* Only listen to music when doing a recorded bench press, and print out workout plan. 
+* Only keep apps that are essential on my phone: no email, google docs, BofA, messenger, instagram.
+* Reclaim leisure: hopefully I can find a new hobby.
 
 ***Surely You're Joking, Mr. Feynman!*** My friend June recommended that I read this book about the funny stories that Feynman had throughout his life, and I finally got to it. It was an enjoyable read, and while I expected it to be life lessons that led him to become a great physicist, Feynman was actually very humble and talked about accidentally brilliant comments he made, picking up women, and overall trolling. Bill Gates found Feynman to be a great teacher, and I hope to watch [his lecture series](https://www.gatesnotes.com/Education/The-Best-Teacher-I-Never-Had) when I get some free time. I found his experiences with hallucinations in sensory deprivation tanks to be interesting, and I hope to try it one day. A piece of advice that Sam Greydanus gave me a while ago is a quote from Feynman:
 
 *Study hard what interests you the most in the most undisciplined, irreverent and original manner possible.*
 
 ***The Life-Changing Magic of Tidying Up.*** When I was packing for Denmark last fall, I thought hard about what possessions I need and were important to me, so I was interested in this book. Marie Kondo's proposed Kon-Mari technique involves discarding all posessions that do not spark joy, and then organizing by item category. She says that surrounding yourself with only things that bring you joy not only puts your house in order, but also brings clarity to your life. The elegance of and reasoning behind her approach substantiates the idea that a simple approach based on first principles thinking is often the best. After reading, I went to my old room in the basement and discarded more than half of my belongings.
+
+## Other Thoughts
+
+**Visualization.** A mindset that came up frequently this term is visualization of success; this can help for things such as hitting a certain bench press weight, cleaning your room, or thinking of the ideal results of a research project.
+
+**What defines success?** Thinking back on my term abroad in Denmark, I realized that the Danes think of success differently from Americans. As seen in one of Oprah's  Oprah's [youtube videos](https://www.youtube.com/watch?v=eKa-3lbLeyA&t=888s), Danes define success with having good values, work-life balance, being happy, and doing something creative. Studying abroad some high thoughts opened my mind up to new perspectives on / ways of thinking of life that I would not have been able to comprehend as a teenager.
+
+For instance, in tenth grade, I was sucking-up to my history teacher because I had an A- in her class, and it was obvious that I just wanted a better grade. She responded by asking me, "why are you so focused on wealth and status?" I told her that I didn't know what I wanted in life, so I only knew to try my best in school so that when I figured out what it was I really wanted, I would be in the best position to achieve it. That was my justification for being so focused on the grade. After I left the classroom, I remember thinking that she was just salty that she had went to school to become a lawyer but ended up becoming a high school teacher who got butthurt every other day because none of her students liked her or cared about her class. At that moment, when I was fifteen, I could not imagine any reality other than the fact that I was right: I was smarter than her and going to be more successful than her, and she was salty about that and taking her failure out on me. But thinking about it now, I was probably wrong. My current mindset finds that 15-year-old me was pretty stupid. Five years from now, I'll probably think that current me was pretty stupid. I should be more open to change, and the fact that I'm probably wrong.
+
+**Rejection.** Often, getting rejected is not a bad thing. I applied to like over twenty finance internships my freshman year of college, and I was rejected by all of them. I felt inadequate and was pissed that having "Dartmouth" on my resume wasn't getting me anywhere like I had imagined in high school. But because I didn't get any of those jobs, I was at home and my mom finally connected me to Protago Labs, where I was introduced to artificial intelligence and have been inspired to work in deep learning ever since. Getting rejected from finance gigs was a blessing in disguise.
 
 ## Visiting Dartmouth
 
@@ -153,6 +159,7 @@ I guess a new thing that I thought was pretty cool from Molly's Game is that her
 - [Bart Kwan](https://www.youtube.com/channel/UCCV3bIgzH800SK0AodYKy1g) is a youtuber, comedian, powerlifter, and business owner. He makes really great insights on working out and on life, all while being funny. He does so many things well and his lifestyle inspires me.
 - Jessica Chastain is a charismatic actor and has such a captivating voice. I loved *Molly's Game* and I thought *Jolene* was alright.
 - Lisa Edelstein is great in *The Good Doctor*.
+- Coach Carter from the movie *Coach Carter* embodies old-school hard work and morals. 
 
 ## Songs
 Some songs that I've been listening to for a while now get me caught up in the feels because I've attached them to specific memories or places. I think it would be cool to listen to these 10 years from now and see if they still resonate:
